--- a/cant/mediaqueries.css
+++ b/cant/mediaqueries.css
@@ -1,19 +1,28 @@
 @media screen and (min-width: 1201px) {
-  #profile {
-    height: 83vh;
-    margin-bottom: 6rem;
-  }
-  
   .section-container {
     display: flex;
-    padding-left: 5rem; 
+    padding-left: 3rem; 
   }
   
   .about-details-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-left: 5rem; 
+    padding-left: 3rem; 
+  }
+
+  .section__pic-container {
+    width: 400px;
+    height: 400px;
+    margin: auto 0;
+    flex-shrink: 0; /* Prevent the container from shrinking */
+  }
+
+  .section__pic-container img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
   }
 }
 
@@ -33,9 +42,7 @@
   .section-container {
     display: flex;
   }
-  
 }
-
 
 @media screen and (max-width: 1200px) {
   #desktop-nav {
@@ -66,6 +73,7 @@
     width: 275px;
     height: 275px;
     margin: 0 auto 2rem;
+    flex-shrink: 0; /* Prevent the container from shrinking */
   }
   .about-containers {
     margin-top: 0;
@@ -118,10 +126,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-shrink: 0; /* Prevent the container from shrinking */
   }
   .section__pic-container img {
     width: 100%;
-    height: 100;
+    height: 100%;
     border-radius: 50%;
     object-fit: cover;
   }
